Added SAM and RDM

--- a/osu!miniparse.html
+++ b/osu!miniparse.html
@@ -378,7 +378,7 @@ html {
 				
 				// COLOR SETTING
 				var tank   = ["Gld", "Gla", "Pld", "Mrd", "War", "Drk"];
-				var dps    = ["Pgl", "Mnk", "Lnc", "Drg", "Arc", "Brd", "Rog", "Nin", "Acn", "Smn", "Thm", "Blm", "Mch"];
+				var dps    = ["Pgl", "Mnk", "Lnc", "Drg", "Arc", "Brd", "Rog", "Nin", "Acn", "Smn", "Thm", "Blm", "Mch", "Sam", "Rdm"];
 				var healer = ["Cnj", "Whm", "Sch", "Ast"];
 				
 				var maxOpacity = (i == myRank)?0.4:0.3;
