--- a/osu!miniparseCompact.html
+++ b/osu!miniparseCompact.html
@@ -421,8 +421,8 @@ html {
 				
 				// COLOR SETTING
 				var tank   = ["Gld", "Gla", "Pld", "Mrd", "War", "Drk", "Gnb"];
-				var dps    = ["Pgl", "Mnk", "Lnc", "Drg", "Arc", "Brd", "Rog", "Nin", "Acn", "Smn", "Thm", "Blm", "Mch", "Sam", "Rdm", "Dnc"];
-				var healer = ["Cnj", "Whm", "Sch", "Ast"];
+				var dps    = ["Pgl", "Mnk", "Lnc", "Drg", "Arc", "Brd", "Rog", "Nin", "Acn", "Smn", "Thm", "Blm", "Mch", "Sam", "Rdm", "Dnc", "Rpr"];
+				var healer = ["Cnj", "Whm", "Sch", "Ast", "Sge"];
 				
 				var maxOpacity = (i == myRank)?0.4:0.3;
 				var minOpacity = (i == myRank)?0.1:0.0;
